manifests/system.yml
apiVersion: v1
kind: Namespace
metadata:
  name: sock-shop
  labels:
    name: sock-shop
